syntax = "proto3";

package inventory;

option go_package = "github.com/kingztech2019/proto_grpc/proto_inventory/grpc-inventory-proto";

import "google/protobuf/timestamp.proto";

 

service InventoryService {
    rpc GetProduct(GetProductRequest) returns (ProductResponse) {}
    rpc UpdateProduct(UpdateProductRequest) returns (ProductResponse) {}
    rpc DeleteProduct(DeleteProductRequest) returns (DeleteProductResponse) {}
  
    rpc CreateOrder(CreateOrderRequest) returns (OrderResponse) {}
    rpc GetOrder(GetOrderRequest) returns (OrderResponse) {}
    rpc UpdateOrder(UpdateOrderRequest) returns (UpdateOrderResponse) {}
    rpc DeleteOrder(DeleteOrderRequest) returns (DeleteOrderResponse) {}
  }
  

message Product {
  string id = 1;
  string name = 2;
  float price = 3;
  int32 inventory_level = 4;
}

message Order {
  string id = 1;
  string product_id = 2;
  int32 quantity = 3;
  google.protobuf.Timestamp order_date = 4;
}

// Requests and Responses
message GetProductRequest {
  string product_id = 1;
}

message ProductResponse {
  Product product = 1;
  string status = 2;
  string message = 3;
}

message DeleteProductRequest {
  string product_id = 1;
}

message DeleteProductResponse {
  bool success = 1;
}

message CreateOrderRequest {
  Order order = 1;
}

message OrderResponse {
  Order order = 1;
  string status = 2;
  string message = 3;
}

message GetOrderRequest {
  string order_id = 1;
}

// Request and Response for updating an order
message UpdateOrderRequest {
    Order order = 1;
  }
  
  message UpdateOrderResponse {
    Order order = 1;
    string status = 2;  // e.g., "success" or "error"
    string message = 3; // optional message for additional info
  }
  
  // Request and Response for deleting an order
  message DeleteOrderRequest {
    string order_id = 1;
  }
  
  message DeleteOrderResponse {
    bool success = 1;   // true if deletion was successful
    string message = 2; // optional message for additional info
  }
  // Request and Response for updating a product
message UpdateProductRequest {
    Product product = 1;
  }
  
  message UpdateProductResponse {
    Product product = 1;
    string status = 2;  // e.g., "success" or "error"
    string message = 3; // optional message for additional info
  }
  
  

// Similarly, define UpdateOrderRequest, DeleteOrderRequest, etc.
